--- a/style.css
+++ b/style.css
@@ -38,3 +38,35 @@ header {
 .checkout {
     padding-top: 10px;
 }
+.checkoutbtn {
+    padding-top: 15px;
+    padding-right: 0px;
+}
+
+.CashCheckOut {
+    padding-top: 10px;
+    display: contents;
+
+}
+.CreditCheckOut {
+    padding-top: 10px;
+    display: contents;
+
+}
+.CashCheckOutNone {
+    padding-top: 10px;
+    display: none;
+
+}
+.CreditCheckOutNone {
+    padding-top: 10px;
+    display: none;
+
+}
+.changeDue {
+
+    padding-top: 10px;
+    display: none;
+
+}
+
