--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ header {
 }
 
 .cartItems{
-    padding-top: 60px;
+    padding-top: 115px;
 }
 .navbar {
-    min-height: 55px;
+    min-height: 75px;
 }
 
 .menubar {
-    min-height: 55px;
+    min-height: 75px;
     background-color: #fff;
     border-bottom: 1px;
     border-bottom-color: slategrey;
@@ -34,7 +34,14 @@ header {
 .headericon {
 
     margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
+    
 }
+.logo {
+    justify-content: center;
+}
+
 .checkout {
     padding-top: 10px;
 }
@@ -49,12 +56,12 @@ header {
 
 }
 .CreditCheckOut {
-    padding-top: 10px;
+    padding-top: 15px;
     display: contents;
 
 }
 .CashCheckOutNone {
-    padding-top: 10px;
+    padding-top: 15px;
     display: none;
 
 }
@@ -70,3 +77,28 @@ header {
 
 }
 
+@media only screen and (min-width: 768px) {
+    .headericon {
+
+        margin-top: 10px;
+        justify-content: end; 
+    }
+    .logo {
+
+        justify-content: start;
+    }
+    .menubar {
+        min-height: 55px;
+        background-color: #fff;
+        border-bottom: 1px;
+        border-bottom-color: slategrey;
+        border-bottom-style: solid;
+    
+    }
+    .navbar {
+        min-height: 55px;
+    }
+    .cartItems {
+        padding-top: 60px;
+    }
+  }
